[tool.poetry]
name = "luz"
version = "0.0.1"
description = "A build system for iOS tweaks."
authors = ["ja1dan <ajaidan0@gmail.com>"]
readme = "README.rst"
packages = [{include = "luz"}]

[tool.poetry.dependencies]
python = "^3.7"
pydeb = {git = "https://github.com/LuzProject/pydeb"}

[tool.poetry.scripts]
luz = 'luz.__main__:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
